# ai-agent

api/: .gitignore  README.md  pyproject.toml
api/api/: main.py
api/api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
api/api/agent/: agent.py  data_sources.yaml
api/api/agent/prompts/: main.jinja2
api/api/agent/tools/: answer_sql_query_tool.py  execute_sql_tool.py  sql_explorer_tool.py
api/api/db/: mongo.py
api/api/llm/: llm.py  token_manager.py
api/api/mock_data/bank/: bank.db  init_postgres.py  init_sqlite3.py
app/: angular.json  eslint.config.js  package-lock.json  package.json
app/src/: index.html  styles.css
app/src/app/: app.config.ts  app.routes.ts
app/src/app/components/confirm-dialog/: confirm-dialog.component.html  confirm-dialog.component.ts
app/src/app/components/global-context-modal/: global-context-modal.component.html  global-context-modal.component.ts
app/src/app/pages/blank/login/: login.component.html
app/src/app/pages/main/: main.component.ts
app/src/app/pages/main/chat/: chat.component.css  chat.component.html  chat.component.ts
app/src/app/pipes/: time-ago.pipe.ts
app/src/app/services/api/: api.service.ts
app/src/app/services/chat/: chat.service.ts
app/src/app/store/: chat.store.ts  user.store.ts
dev/: .gitignore  docker-compose.yml
